--- a/CentroComunitarioGanesh/index.html
+++ b/CentroComunitarioGanesh/index.html
@@ -98,7 +98,7 @@
   <header class="header">
     <div class="logo ">
       <img
-        src="SRC/img/logo ganesh.png"
+        src="SRC/img/logoGanesh.png"
         width="200px">
       <h1>CENTRO COMUNITARIO GANESH </h1>
     </div>
@@ -143,7 +143,7 @@
     <div class="container4">
       <div class="card4">
         <div>
-          <img class="imgw4" src="./SRC/img/Misión.png" alt="" width="300px" height="250px">
+          <img class="imgw4" src="./SRC/img/Mision.png" alt="" width="300px" height="250px">
 
           <div class="info4">
             <h2>Misión</h2>
@@ -155,7 +155,7 @@
       </div>
       <div class="card4">
         <div>
-          <img class="imgw4" src="./SRC/img/Visión.png" alt="" width="300px" height="250px">
+          <img class="imgw4" src="./SRC/img/Vision.png" alt="" width="300px" height="250px">
         </div>
         <div class="info4">
           <h2>Visión</h2>
@@ -205,7 +205,7 @@
     <div class="container8">
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/Diseño web.png" alt="Imagen 1">
+          <img class=imgw6 src="/./SRC/img/DiseñoWeb.png" alt="Imagen 1">
         </div>
         <div class="card8-info">
           <h2>Diseño web</h2>
@@ -214,7 +214,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/Peluqería.jpg" alt="Imagen 2">
+          <img class=imgw6 src="/./SRC/img/Peluqueria.jpg" alt="Imagen 2">
         </div>
         <div class="card8-info">
           <h2>Alta Peluqueria</h2>
@@ -223,7 +223,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/Medicina alternativa.jpg" alt="Imagen 3">
+          <img class=imgw6 src="/./SRC/img/MedicinaAlternativa.jpg" alt="Imagen 3">
         </div>
         <div class="card8-info">
           <h2>Medicina alternativa</h2>
@@ -232,7 +232,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="./SRC/img/Diseño textil.jpg" alt="Imagen 1">
+          <img class=imgw6 src="./SRC/img/DiseñoTextil.jpg" alt="Imagen 1">
         </div>
         <div class="card8-info">
           <h2>Corte y diseño textil</h2>
@@ -241,7 +241,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="./SRC/img/Repostería.jpg" alt="Imagen 1">
+          <img class=imgw6 src="./SRC/img/Reposteria.jpg" alt="Imagen 1">
         </div>
         <div class="card8info">
           <h2>Reposteria</h2>
@@ -251,7 +251,7 @@
 
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="./SRC/img/Enfermería.jpg" alt="Imagen 1">
+          <img class=imgw6 src="./SRC/img/Enfermeria.jpg" alt="Imagen 1">
         </div>
         <div class="card5-info">
           <h2>Enfermeria</h2>
