--- a/CentroComunitarioGanesh/index.html
+++ b/CentroComunitarioGanesh/index.html
@@ -169,15 +169,15 @@
       <h1>¿Qué hacemos?</h1>
       <div class="container5">
         <div class="card5">
-          <img src="./src/img/anacampos1.png" class="imgw5" alt="Proceso terapeutico" height="250px" width="250px">
+          <img src="./SRC/img/anacampos1.png" class="imgw5" alt="Proceso terapeutico" height="250px" width="250px">
           <p class="p5">Te acompañamos en tu proceso terapéutico.</p>
         </div>
         <div class="card5">
-          <img src="./src/img/anacampos2.png" class="imgw5" alt="Crecimiento" height="250px" width="250px">
+          <img src="./SRC/img/anacampos2.png" class="imgw5" alt="Crecimiento" height="250px" width="250px">
           <p class="p5">Proporcionamos recursos para tu desarrollo personal.</p>
         </div>
         <div class="card5">
-          <img src="./src/img/anacampos3.png" class="imgw5" alt="lazos amistad" height="250px" width="250px">
+          <img src="./SRC/img/anacampos3.png" class="imgw5" alt="lazos amistad" height="250px" width="250px">
           <p class="p5">Establecemos lazos de complicidad.</p>
         </div>
       </div>
@@ -205,7 +205,7 @@
     <div class="container8">
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/DiseñoWeb.png" alt="Imagen 1">
+          <img class=imgw6 src="./SRC/img/DiseñoWeb.png" alt="Imagen 1">
         </div>
         <div class="card8-info">
           <h2>Diseño web</h2>
@@ -214,7 +214,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/Peluqueria.jpg" alt="Imagen 2">
+          <img class=imgw6 src="./SRC/img/Peluqueria.jpg" alt="Imagen 2">
         </div>
         <div class="card8-info">
           <h2>Alta Peluqueria</h2>
@@ -223,7 +223,7 @@
       </div>
       <div class="container-cards8">
         <div class="card8">
-          <img class=imgw6 src="/./SRC/img/MedicinaAlternativa.jpg" alt="Imagen 3">
+          <img class=imgw6 src="./SRC/img/MedicinaAlternativa.jpg" alt="Imagen 3">
         </div>
         <div class="card8-info">
           <h2>Medicina alternativa</h2>
